Site Width Fix
Basic fix to prevent site from being horizontally squished improperly.

--- a/mystyle.css
+++ b/mystyle.css
@@ -48,9 +48,9 @@
 	.content {
 		max-width: 1600px;
 		margin: auto;
-		min-width:960px;
+		min-width:1110px;
 		width: auto !important;/* Firefox will set width as auto */
-		width:1000px;          /* As IE6 ignores !important it will set width as 1000px; */
+		width:1110px;          /* As IE6 ignores !important it will set width as 1100px; */
 	}
 	.undecorated-links {
 		text-decoration:none;
@@ -147,7 +147,7 @@
 		z-index: 0;
 		color: #000000;
 		height: 28px;
-		margin: -1.25em 0em 3em 13.5em;
+		margin: -1.25em 0em 3em 12.75em;
 	}
 	.header-sidekick-buttons{
 	}
@@ -155,11 +155,12 @@
 		border: none;
 		background-color: #000000;
 		color: #EEEEEE;
-		padding: 0px 26px;
+		padding: 0px 0px;
 		font-size: 22px;
 		float: left;
 		transition-duration: 0.2s;
 		font-family: SourceSansPro;
+		width: 120px;
 	}
 	.header-button:hover {
 		background-color: #7F7F7F;
@@ -169,10 +170,11 @@
 		border: none;
 		color: white;
 		background-color: #3D3D3D;
-		padding: 0px 26px;
+		padding: 0px 0px;
 		font-size: 22px;
 		float: left;
 		font-family: SourceSansPro;
+		width: 120px;
 	}
 	.header-sidekick-links {
 		margin-right: 10em;
@@ -257,7 +259,7 @@
 	.project-content-right {
 	}
 	.project-video-embed {
-		--div-width: 450px;
+		--div-width: 425px;
 		width: var(--div-width);
 		height: calc(var(--div-width) * 9 / 16);
 	}
